Add button to toggle visibility of listing details

--- a/site/admin.html
+++ b/site/admin.html
@@ -71,7 +71,8 @@
      <script type="text/template" id="template-admin-listing">
         <div class="options">
             <a href="javascript:;" data-id="<%=id%>" class="model-edit">Edit</a> |
-            <a href="javascript:;" data-id="<%=id%>" class="model-delete">Delete</a>
+            <a href="javascript:;" data-id="<%=id%>" class="model-delete">Delete</a> |
+            <a href="javascript:;" class="collapse">Show/Hide Details</a>
         </div>
         <div class="name">
             <span class="label">Name:</span>
