Updates post-moment of zen.  Move /main to /map for templates and views. Comment out passport stuff for node for now.

--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="author" content="Daniel Na" />
     <meta name="description" content="My map of favorite places to eat in Northern VA/MD/DC.">
-    <title>Notable NOVA Eateries</title>
+    <title>MAPEATER | om nom nom</title>
     <link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:900italic' rel='stylesheet' type='text/css'>
 </head>
